# Parafoil_Dynamics

./: CMakeLists.txt  README.md  run.sh
config/: Control_Commands.txt  init_state.yaml  param_aerodynamics.yaml  param_physical.yaml
outputs/: show_trajectory.py  states.txt
src/: Parafoil_Aerodynamics.cc  Parafoil_Aerodynamics.h  parafoil_system.cc
